# ivan

./: CMakeLists.txt  README.md  main.cpp
AI/: AI.hpp  bestMoveAI.cpp
saving/: downloading.cpp  saving.hpp  uploading.cpp
user/: user.hpp  userMoves.cpp
window/: changes.cpp  mainLoop.cpp  mouse.cpp  window.hpp
